manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gm-bot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gm-bot
  template:
    metadata:
      labels:
        app: gm-bot
    spec:
      containers:
      - name: gm-bot
        image: localhost:32000/gm-bot:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: rulebooks
          mountPath: /rulebooks
          readOnly: true
      volumes:
      - name: rulebooks
        persistentVolumeClaim:
          claimName: rulebooks-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gm-bot-service
spec:
  selector:
    app: gm-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gm-bot-ingress
spec:
  # https://github.com/STRRL/cloudflare-tunnel-ingress-controller
  ingressClassName: cloudflare-tunnel
  rules:
  - host: gm-bot.cyberdeck.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gm-bot-service
            port:
              number: 80
